fix: fix the svn header view separator invisible
1. set auto expand header content
2. add separator in header view

Bug: https://pms.uniontech.com/bug-view-172985.html
log: fix bug

--- a/3rdparty/unioncode-GitQlient/src/resources/stylesheet.css
+++ b/3rdparty/unioncode-GitQlient/src/resources/stylesheet.css
@@ -162,6 +162,7 @@ QHeaderView:section
    padding: 5px 15px;
    border-bottom-width: 1px;
    border-bottom-style: solid;
+   border-right: 0.5px solid gray;
 }
 
 QTabWidget::pane
